--- a/app/di.yml
+++ b/app/di.yml
@@ -178,11 +178,8 @@ services:
       - ['addExtension', [@twig.extension.permissions]]
       - ['addExtension', [@twig.extension.github]]
 
-  layout:
-    class: 'QL\Hal\Layout'
-
   # The primary twig template. All other twig services should use this service as a parent
-  twig.template:
+  twig.template.old:
     class: 'Twig_Template'
     factory_service: 'twig.environment'
     factory_method: 'loadTemplate'
