Refactor session store to use encrypted cookies only

--- a/app/config.global.yml
+++ b/app/config.global.yml
@@ -6,6 +6,9 @@ parameters:
     twig.debug: false
     debug.godmode: 0
 
+    slim.configuration:
+        debug: '%debug%'
+
     ldap.host: 'ldap.example.com'
     ldap.domain: 'MI'
     ldap.baseDn: 'DC=mi,DC=corp'
@@ -25,3 +28,19 @@ parameters:
         logs: 'Logs'
         admin: 'Admin'
         help: 'Help'
+
+    # To set a specific cache time for a route, add the route name as a key,
+    # and the time to cache in seconds. If not specified, default time is 10 seconds.
+    api.cachetimes:
+        # these are lower because having the most update to date status is critical
+        api.build: 5
+        api.push: 5
+        api.queue: 0 # the queue api uses no caching
+        api.queue.refresh: 0 # the queue api uses no caching
+
+    # base58
+    unique.alphabet: '123456789abcdefghijkmnopqrstuvwxyzABCDEFGHJKLMNPQRSTUVWXYZ'
+
+    # Cookie settings
+    session.cookie.configuration:
+        lifetime: '1 day'
