--- a/app/config.yml
+++ b/app/config.yml
@@ -9,6 +9,8 @@ parameters:
     # environment independent parameters
     application.id: '200947'
     application.major.version: '2'
+
+    # Replaced before di compiling
     application.sha: ''
 
     slim.hooks:
@@ -17,16 +19,3 @@ parameters:
             - 'slim.hook.errors'
         slim.before.router:
             - 'slim.hook.routes'
-
-
-    # To set a specific cache time for a route, add the route name as a key,
-    # and the time to cache in seconds. If not specified, default time is 10 seconds.
-    api.cachetimes:
-        # these are lower because having the most update to date status is critical
-        api.build: 5
-        api.push: 5
-        api.queue: 0 # the queue api uses no caching
-        api.queue.refresh: 0 # the queue api uses no caching
-
-    # base58
-    unique.alphabet: '123456789abcdefghijkmnopqrstuvwxyzABCDEFGHJKLMNPQRSTUVWXYZ'
