--- a/app/di.panthor.yml
+++ b/app/di.panthor.yml
@@ -1,20 +1,143 @@
 # services stolen from vendor/ql/panthor/configuration/di.yml
 # they will be here until we can fully port hal to panthor and use the default di.yml
 parameters:
+    routes: []
+    slim.hooks:
+        slim.before:
+            - 'slim.hook.apacheAuthorization'
+        slim.before.router:
+            - 'slim.hook.routes'
+
+    debug: false
+
+    # encryption
+    encryption.secret: ''
+
     # twig defaults
     twig.debug: true
     twig.template.dir: 'app/templates'
     twig.cache.dir: '.twig'
 
+    # Internal panthor parameters, do not override unless you know what you are doing.
+    panthor.internal.timezone: 'UTC'
+
 services:
 
+    # Injected at runtime by the Bootstrap
+    # Note: This path has NO TRAILING SLASH
+    root:               {synthetic: true}
+
+    ############################################################################
     # aliases
+    ############################################################################
+
+    # slim
+
+    slim:                           {parent: panthor.slim}
+    slim.configurator:              {parent: panthor.slim.configurator}
+
+    slim.hook.routes:               {parent: panthor.slim.hook.routes}
+    slim.hook.apacheAuthorization:  {parent: panthor.slim.hook.apacheAuthorization}
+
+    slim.halt:                      {parent: panthor.slim.halt}
+
+    slim.environment:               {parent: panthor.slim.environment}
+    slim.request:                   {parent: panthor.slim.request}
+    slim.response:                  {parent: panthor.slim.response}
+    slim.cookies:                   {parent: panthor.slim.cookies}
+
+    slim.router:                    {parent: panthor.slim.router}
+    slim.route:                     {parent: panthor.slim.route}
+    slim.route.parameters:          {parent: panthor.slim.route.parameters}
+
+    # utilities
+    clock:                          {parent: panthor.clock}
+    encryption:                     {parent: panthor.encryption}
+    encryption.cookie:              {parent: panthor.encryption}
+
+    # twig
     twig.cache.dir:                 {parent: panthor.twig.cache.dir}
     twig.template.dir:              {parent: panthor.twig.template.dir}
     twig.template:                  {parent: panthor.twig.template}
     twig.context:                   {parent: panthor.twig.context}
     twig.loader:                    {parent: panthor.twig.loader}
     twig.environment:               {parent: panthor.twig.environment}
+
+    ############################################################################
+    # services
+    ############################################################################
+
+    # slim
+
+    panthor.slim:
+        class: 'Slim\Slim'
+        arguments:
+            - debug: %debug%
+        configurator: [@slim.configurator, 'configure']
+        properties:
+            response: @slim.response
+
+    panthor.slim.configurator:
+        class: 'QL\Panthor\Bootstrap\SlimConfigurator'
+        arguments: [@service_container, %slim.hooks%]
+
+    panthor.slim.hook.routes:
+        class: 'QL\Hal\Slim\RouteLoaderHook'
+        # class: 'QL\Panthor\Slim\RouteLoaderHook'
+        arguments: [@service_container, %routes%]
+
+    panthor.slim.hook.apacheAuthorization:
+        class: 'QL\Panthor\Slim\ApacheAuthorizationHeaderHook'
+
+    # slim accessors
+
+    panthor.slim.environment:
+        class: 'Slim\Environment'
+        factory_service: 'slim'
+        factory_method: 'environment'
+
+    panthor.slim.request:
+        class: 'Slim\Http\Request'
+        factory_service: 'slim'
+        factory_method: 'request'
+
+    panthor.slim.response:
+        class: 'Slim\Http\Response'
+        properties:
+            cookies: @slim.cookies
+
+    panthor.slim.cookies:
+        class: 'QL\Panthor\Http\EncryptedCookies'
+        arguments: [@slim, @encryption.cookie]
+
+    panthor.slim.router:
+        class: 'Slim\Router'
+        factory_service: 'slim'
+        factory_method: 'router'
+
+    panthor.slim.route:
+        class: 'Slim\Route'
+        factory_service: 'slim.router'
+        factory_method: 'getCurrentRoute'
+
+    panthor.slim.route.parameters:
+        class: 'na'
+        factory_service: 'slim.route'
+        factory_method: 'getParams'
+
+    panthor.slim.halt:
+        class: 'QL\Panthor\Slim\Halt'
+        arguments: [@slim]
+
+    # utilities
+
+    panthor.encryption:
+        class: 'MCP\Crypto\AES'
+        arguments: [%encryption.secret%]
+
+    panthor.clock:
+        class: 'MCP\DataType\Time\Clock'
+        arguments: ['now', %panthor.internal.timezone%]
 
     # twig
     panthor.twig.configurator:
